# python-qualitybase

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  service.py
docs/: AI.md  development.md  purpose.md  structure.md
src/qualitybase/: .commands.json  __init__.py  __main__.py  cli.py  decorators.py  utils.py
src/qualitybase/commands/: __init__.py  args.py  base.py  build.py  clean.py  copypy.py  help.py  publish.py  quality.py  version.py
src/qualitybase/helpers/: cli.py  service.py
